<resources>
    <string name="app_name">Android</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="activity">Activity</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="textview">TextView</string>
    <string name="adams">Adams Rib Auto Spares</string>
    <string name="mabisage_lounge">Mabisage Lounge</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="username">username</string>
    <string name="number">Enter No.</string>
    <string name="pass">Password</string>
    <string name="conpass">Confirm Pass</string>
    <string name="add">Add</string>
    <string name="del">delete</string>
    <string name="edit">Edit</string>
    <string name="home">Home</string>
    <string name="about">About Us</string>
    <string name="contact">Contact Us</string>
    <string name="logo">Logo</string>
    <string name="linear">Linear Layout</string>
    <string name="constraint">Constraint Layout</string>
    <string name="bdate">Birth Date</string>
    <string name="country">Country</string>
    <string name="textv1">TextV1</string>
    <string name="textv2">TextV2</string>
    <string name="textv3">TextV3</string>
    <string name="textv4">TextV4</string>
    <string name="textv5">TextV5</string>
    <string name="textv6">TextV6</string>
    <string name="textv7">TextV7</string>
    <string name="textvxiii">textv13</string>
    <string name="textvxii">textv12</string>
    <string name="textvxi">textv11</string>
    <string name="textvx">textv10</string>
    <string name="textv9">textv9</string>
    <string name="textv8">textv8\n</string>
    <string name="jane_doe">Jane Doe</string>
    <string name="hello">Hello</string>
    <string name="search_for">search for...</string>
    <string name="todo">TODO</string>
    <string name="cloud">Cloud</string>
    <string name="browser">Browser</string>
    <string name="network">Network</string>
    <string name="router">Router</string>
    <string name="read_more">Read More</string>
    <string name="_30_mbps">30 mbps</string>
    <string name="saved_article">Saved Article</string>
    <string name="_24">24</string>
    <string name="click_me">Click Me</string>
</resources>